--- a/packages/app-shell-events/package.json
+++ b/packages/app-shell-events/package.json
@@ -1,36 +1,26 @@
 {
   "name": "@hitachivantara/app-shell-events",
   "version": "1.0.4",
-  "description": "AppShell Events",
-  "author": "Hitachi Vantara - Boba Fett Team",
-  "license": "Apache-2.0",
   "type": "module",
+  "private": false,
+  "author": "Hitachi Vantara UI Kit Team",
+  "description": "AppShell Events",
+  "homepage": "https://github.com/lumada-design/hv-uikit-react",
+  "main": "src/index.ts",
   "sideEffects": false,
-  "module": "dist/esm/index.js",
-  "typings": "./dist/dts/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/dts/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "default": "./dist/esm/index.js"
-    },
-    "./package.json": "./package.json"
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lumada-design/hv-uikit-react.git",
+    "directory": "packages/app-shell-events"
   },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "bugs": "https://github.com/lumada-design/hv-uikit-react/issues",
   "scripts": {
-    "build": "npm-run-all clean build:*",
-    "build:js": "npx vite build",
-    "clean": "npx rimraf ./dist *.tgz tsconfig.tsbuildinfo",
-    "dev": "npx vite build --watch",
-    "lint-check": "npx eslint --ext .js,.jsx,.ts,.tsx src --color",
-    "lint": "npm-run-all --parallel lint:*",
-    "lint:eslint": "npm run lint-check -- --cache --fix",
-    "lint:prettier": "npx prettier --write \"src/**/*.{html,css,js,jsx,ts,tsx}\""
+    "build": "npm run clean && vite build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "clean": "npx rimraf dist package",
+    "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
     "@hitachivantara/uikit-react-core": "^5.72.0"
@@ -39,7 +29,33 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "vite": "^5.0.4"
+    "vite": "^6.2.2"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "directory": "package",
+    "module": "dist/esm/index.js",
+    "types": "./dist/types/index.d.ts",
+    "exports": {
+      ".": {
+        "types": "./dist/types/index.d.ts",
+        "import": "./dist/esm/index.js",
+        "default": "./dist/esm/index.js"
+      },
+      "./package.json": "./package.json"
+    }
+  },
+  "clean-publish": {
+    "withoutPublish": true,
+    "tempDir": "package",
+    "fields": [
+      "main"
+    ],
+    "files": [
+      "tsconfig.json"
+    ]
   }
 }
