--- a/packages/app-shell-ui/package.json
+++ b/packages/app-shell-ui/package.json
@@ -1,38 +1,26 @@
 {
   "name": "@hitachivantara/app-shell-ui",
   "version": "1.9.0",
-  "description": "AppShell Component",
-  "author": "Hitachi Vantara - Boba Fett Team",
-  "license": "Apache-2.0",
   "type": "module",
+  "private": false,
+  "author": "Hitachi Vantara UI Kit Team",
+  "description": "AppShell Component",
+  "homepage": "https://github.com/lumada-design/hv-uikit-react",
+  "main": "src/index.ts",
   "sideEffects": false,
-  "module": "dist/esm/index.js",
-  "typings": "./dist/dts/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/dts/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "default": "./dist/esm/index.js"
-    },
-    "./package.json": "./package.json"
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lumada-design/hv-uikit-react.git",
+    "directory": "packages/app-shell-ui"
   },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "bugs": "https://github.com/lumada-design/hv-uikit-react/issues",
   "scripts": {
-    "build": "npm-run-all clean build:*",
-    "build:js": "tsc -p tsconfig.prod.json && vite build",
-    "clean": "npx rimraf ./dist *.tgz tsconfig.tsbuildinfo",
-    "dev": "vite build --watch",
-    "lint-check": "npx eslint --ext .js,.jsx,.ts,.tsx src --color",
-    "lint": "npm-run-all --parallel lint:*",
-    "lint:eslint": "npm run lint-check -- --cache --fix",
-    "lint:prettier": "npx prettier --write \"src/**/*.{html,css,js,jsx,ts,tsx}\"",
-    "test": "vitest run",
-    "coverage": "vitest run --coverage"
+    "build": "npm run clean && vite build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "clean": "npx rimraf dist package",
+    "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
     "@emotion/css": "^11.10.5",
@@ -43,7 +31,7 @@
     "@hitachivantara/app-shell-shared": "1.4.2",
     "@hitachivantara/uikit-react-core": "^5.72.0",
     "@hitachivantara/uikit-react-icons": "^5.11.0",
-    "@mui/material": "^5.12.3",
+    "@mui/material": "^5.16.14",
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.0.1",
     "react-error-boundary": "^4.0.10",
@@ -60,8 +48,33 @@
     "@types/react": "^18.0.28",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.2.0",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.5",
-    "vite": "^5.0.4"
+    "vite": "^6.2.2"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "directory": "package",
+    "module": "dist/esm/index.js",
+    "types": "./dist/types/index.d.ts",
+    "exports": {
+      ".": {
+        "types": "./dist/types/index.d.ts",
+        "import": "./dist/esm/index.js",
+        "default": "./dist/esm/index.js"
+      },
+      "./package.json": "./package.json"
+    }
+  },
+  "clean-publish": {
+    "withoutPublish": true,
+    "tempDir": "package",
+    "fields": [
+      "main"
+    ],
+    "files": [
+      "tsconfig.json"
+    ]
   }
 }
