--- a/packages/app-shell-vite-plugin/tsconfig.json
+++ b/packages/app-shell-vite-plugin/tsconfig.json
@@ -1,12 +1,16 @@
 {
-  "extends": "../../tsconfig.json",
-
-  "references": [{ "path": "../app-shell-shared" }],
-
   "include": ["src", "rollup.config.js"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "tests"],
 
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+
+    "noEmit": false,
+    "noCheck": true,
+    "sourceMap": false,
+    "declaration": true,
     "outDir": "dist"
   }
 }
