ci(release): change cron to weekly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   schedule:
-    - cron: "0 5 * * 1,4" # at 05:00 on monday,thursday
+    - cron: "0 5 * * 5" # at 05:00 on fridays
   workflow_dispatch:
 
 jobs:
