--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,6 +66,10 @@
 
     // #region TypeScript
     "@typescript-eslint/no-empty-object-type": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "ignoreRestSiblings": true }
+    ],
     // #endregion
 
     "no-restricted-imports": [
@@ -97,11 +101,7 @@
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-unsafe-function-type": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      { "ignoreRestSiblings": true }
-    ]
+    "@typescript-eslint/no-unsafe-function-type": "off"
   },
   "overrides": [
     {
