ci(a11y): change to checkA11y
migrate the a11y script to the storybook built-in checkA11y

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clean": "lerna run clean",
     "build": "lerna run build",
     "build:doc": "storybook build -o dist --quiet --test",
-    "build:app": "vite build apps/app",
+    "build:app": "npm run build -w apps/app",
     "build:nextra": "npm run build -w apps/docs",
     "test": "lerna run test -- --run",
-    "test:a11y": "node scripts/a11y.mjs",
+    "test:a11y": "test-storybook --excludeTags=skipTestRunner --maxWorkers=2",
     "test:coverage": "lerna run test -- --run --coverage",
     "check": "npm-run-all --parallel prettier lint typecheck",
     "prettier": "prettier --log-level warn --check .",
