build(Storybook): build default to test mode

--- a/.config/chromatic.config.json
+++ b/.config/chromatic.config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://www.chromatic.com/config-file.schema.json",
   "projectId": "Project:66a1254d9d7ebf301ff1bebb",
-  "buildScriptName": "build:doc:test",
+  "buildScriptName": "build:doc",
   "skip": "dependabot/**"
 }
