--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -20,3 +20,5 @@ runs:
       # ensure dev dependencies are installed
       run: npm ci --include=dev
       shell: bash
+      env:
+        HUSKY: 0
