chore: upgrade nextra/next & setup layout/page config
chore: fix getStaticProps/useData APIs in Header/Playground

--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -4,8 +4,9 @@
     "useDefineForClassFields": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [{ "name": "next" }]
   },
-  "include": ["**/*"],
+  "include": ["**/*", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
