--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "pagefind --site dist --output-path dist/_pagefind",
     "start": "npx serve dist"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@unocss/postcss": "^66.0.0",
+    "pagefind": "^1.3.0",
     "raw-loader": "^4.0.2",
     "rehype-mdx-code-props": "^3.0.1",
     "string-replace-loader": "^3.1.0",
