--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -113,14 +113,6 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Dependencies
-        uses: ./.github/actions/install-dependencies
-
-      - name: Run Build
-        run: npm run build:app
+    uses: ./.github/workflows/build.yml
+    with:
+      build-all: false
