--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "check": "npm-run-all --parallel prettier lint typecheck",
     "prettier": "prettier --log-level warn --check .",
     "prettier:fix": "prettier --write .",
-    "lint": "eslint . --ext .ts,.tsx --cache",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix",
     "typecheck": "tsc --noEmit",
     "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
     "publish-dry": "lerna publish --no-push --registry \"http://localhost:4873/\"",
@@ -67,8 +67,6 @@
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^3.0.9",
     "@vitest/ui": "^3.0.9",
@@ -78,15 +76,6 @@
     "clean-publish": "^5.2.1",
     "clsx": "^2.0.0",
     "cpy-cli": "^5.0.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-ssr-friendly": "^1.3.0",
-    "eslint-plugin-storybook": "^9.0.0",
     "happy-dom": "^17.5.6",
     "husky": "^8.0.3",
     "jsdom": "^26.1.0",
@@ -94,6 +83,7 @@
     "license-compliance": "^3.0.0",
     "lint-staged": "^16.1.0",
     "npm-run-all2": "^8.0.4",
+    "oxlint": "^1.1.0",
     "prettier": "^3.1.0",
     "pretty-quick": "^4.0.0",
     "react": "^18.2.0",
@@ -109,9 +99,6 @@
   },
   "overrides": {
     "@storybook/csf": "^0.1.13",
-    "eslint-plugin-jsx-a11y": {
-      "aria-query": "^5.3.0"
-    },
     "storybook": "$storybook"
   },
   "packageManager": "npm@10.8.1+sha256.b8807aebb9656758e2872fa6e7c564b506aa2faa9297439a478d471d2fe32483",
@@ -121,7 +108,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --ext .ts,.tsx --cache",
+      "oxlint",
       "pretty-quick --staged"
     ]
   },
