--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,6 +9,7 @@
     "moduleDetection": "force",
     "isolatedModules": true,
     // "verbatimModuleSyntax": true,
+    "erasableSyntaxOnly": true,
 
     /* Strictness */
     "strict": true,
