--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -26,6 +26,8 @@
     "./package.json": "./package.json",
     "./prettier": "./.prettierrc.json",
     "./licenses": "./licenses/index.js",
+    "./oxlint/base": "./oxlint/base.json",
+    "./oxlint/strict": "./oxlint/strict.json",
     "./tsconfig": "./tsconfig.json"
   },
   "peerDependencies": {
