chore: remove app alias & barrels

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,7 +47,8 @@
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-http-backend": "^3.0.2",
     "react-i18next": "^15.4.0",
-    "react-router-dom": "^6.29.0"
+    "react-router-dom": "^6.29.0",
+    "vite-tsconfig-paths": "^5.1.0"
   },
   "engineStrict": true,
   "engines": {
