--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -43,7 +43,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.4.2",
     "unocss": "^66.0.0",
-    "vite": "^6.2.2",
-    "vite-tsconfig-paths": "^5.1.0"
+    "vite": "^6.2.2"
   }
 }
