--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -24,7 +24,8 @@
   "scripts": {},
   "exports": {
     "./prettier": "./.prettierrc.json",
-    "./licenses": "./licenses/index.js"
+    "./licenses": "./licenses/index.js",
+    "./tsconfig": "./tsconfig.json"
   },
   "peerDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
