--- a/apps/default-app/tsconfig.json
+++ b/apps/default-app/tsconfig.json
@@ -1,18 +1,8 @@
 {
   "extends": "../../tsconfig.json",
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
-
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "types": ["node"],
-
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
-    "allowSyntheticDefaultImports": true
-  },
-
-  "include": ["src"]
+    "moduleResolution": "Node"
+  }
 }
