--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "husky": "^8.0.3",
     "jsdom": "^26.1.0",
     "lerna": "^8.1.7",
+    "license-compliance": "^3.0.0",
     "lint-staged": "^16.1.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.1.0",
