--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -28,16 +28,23 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hitachivantara/uikit-uno-preset": "*",
+    "@hookform/resolvers": "^3.3.2",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@unocss/postcss": "^66.0.0",
     "pagefind": "^1.3.0",
     "raw-loader": "^4.0.2",
+    "react-hook-form": "^7.49.0",
     "rehype-mdx-code-props": "^3.0.1",
     "string-replace-loader": "^3.1.0",
     "swr": "^2.3.2",
     "typescript": "^5.4.2",
-    "unocss": "^66.0.0"
+    "unocss": "^66.0.0",
+    "zod": "^3.22.4"
   }
 }
