--- a/package.json
+++ b/package.json
@@ -40,10 +40,6 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/modifiers": "^6.0.1",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -51,7 +47,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hitachivantara/uikit-config": "*",
-    "@hookform/resolvers": "^3.3.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@iconify-json/ph": "^1.2.1",
     "@mdx-js/react": "^3.1.0",
@@ -83,8 +78,6 @@
     "clean-publish": "^5.2.1",
     "clsx": "^2.0.0",
     "cpy-cli": "^5.0.0",
-    "echarts": "^5.4.3",
-    "echarts-for-react": "^3.0.2",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -94,9 +87,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-ssr-friendly": "^1.3.0",
     "eslint-plugin-storybook": "^9.0.0",
-    "formik": "^2.4.5",
     "happy-dom": "^17.5.6",
-    "html-react-parser": "^3.0.16",
     "husky": "^8.0.3",
     "jsdom": "^26.1.0",
     "lerna": "^8.1.7",
@@ -106,21 +97,14 @@
     "pretty-quick": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-hook-form": "^7.49.0",
-    "reactflow": "^11.10.1",
     "rimraf": "^6.0.1",
     "storybook": "^9.0.0",
     "swr": "^2.2.4",
     "typescript": "^5.8.2",
-    "uid": "^2.0.2",
     "unocss": "^66.0.0",
     "vite": "^6.2.2",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.0.9",
-    "yup": "^1.3.2",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "vitest": "^3.0.9"
   },
   "overrides": {
     "@storybook/csf": "^0.1.13",
