--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "packages",
     "templates"
   ],
-  "exclude": ["node_modules", "packages/*/dist", "packages/*/package"]
+  "exclude": ["node_modules", "**/dist", "packages/*/package"]
 }
