chore: review clean & unused scripts

--- a/packages/app-shell-shared/package.json
+++ b/packages/app-shell-shared/package.json
@@ -18,7 +18,7 @@
     "build": "npm run clean && vite build",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "clean": "npx rimraf dist package",
+    "clean": "rimraf dist package coverage",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
