--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -19,7 +19,7 @@
     "dev": "tsc-watch --noClear -p tsconfig.json",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "clean": "npx rimraf dist package",
+    "clean": "rimraf dist package coverage",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
