--- a/packages/app-shell-events/package.json
+++ b/packages/app-shell-events/package.json
@@ -17,7 +17,7 @@
   "bugs": "https://github.com/lumada-design/hv-uikit-react/issues",
   "scripts": {
     "build": "npm run clean && vite build",
-    "clean": "npx rimraf dist package",
+    "clean": "rimraf dist package coverage",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
