--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
-    "clean": "npx rimraf dist package",
+    "clean": "rimraf dist package coverage",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
