--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
-    "clean": "npx rimraf dist package",
+    "clean": "rimraf dist package coverage",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
