--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -100,16 +100,10 @@ jobs:
       - name: Install Playwright
         run: npx playwright install --with-deps
 
-      - name: Build Storybook
-        run: npm run build:doc
+      - name: Run Tests
+        run: npm run test:a11y
         env:
           NODE_OPTIONS: "--max_old_space_size=8192"
-
-      - name: Run Tests
-        run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-          "npx serve dist -l 6006 -L" \
-          "npx wait-on tcp:6006 && npm run test:a11y"
 
   build:
     name: Build
