--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:app": "npm run build -w apps/app",
     "build:nextra": "npm run build -w apps/docs",
     "test": "lerna run test -- --run",
-    "test:a11y": "test-storybook --excludeTags=skipTestRunner --maxWorkers=2",
+    "test:a11y": "vitest --project=storybook",
     "test:coverage": "lerna run test -- --run --coverage",
     "check": "npm-run-all --parallel prettier lint typecheck",
     "prettier": "prettier --log-level warn --check .",
@@ -51,27 +51,26 @@
     "@iconify-json/ph": "^1.2.1",
     "@mdx-js/react": "^3.1.0",
     "@mui/material": "^5.14.20",
-    "@playwright/test": "^1.41.1",
+    "@playwright/test": "^1.53.2",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
     "@storybook/addon-themes": "^9.0.15",
+    "@storybook/addon-vitest": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
-    "@storybook/test-runner": "^0.23.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.0.9",
     "arquero": "^5.3.0",
-    "axe-playwright": "^2.0.1",
     "chromatic": "^12.0.0",
     "clean-publish": "^5.2.1",
     "clsx": "^2.0.0",
