--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -26,6 +26,7 @@
     "./package.json": "./package.json",
     "./prettier": "./.prettierrc.json",
     "./licenses": "./licenses/index.js",
+    "./oxlint/*": "./oxlint/*",
     "./tsconfig": "./tsconfig.json"
   },
   "peerDependencies": {
