--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,7 +11,7 @@
     /* Others */
     "lib": ["es2022", "dom", "dom.iterable"],
     "jsx": "react-jsx",
-    "types": ["@testing-library/jest-dom", "vite/client", "vitest"]
+    "types": ["@testing-library/jest-dom", "vite/client", "vitest/globals"]
   },
   "include": ["packages/**/src"]
 }
