--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -15,13 +15,13 @@
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    // "noUncheckedIndexedAccess": true,
 
     /* Bundling options (vite) */
     "module": "preserve",
     "noEmit": true,
 
     /* Others */
+    "jsx": "react-jsx",
     "lib": ["es2022", "dom", "dom.iterable"]
   }
 }
