--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
-  "description": "Core React components for the NEXT Design System.",
+  "description": "UI Kit Core React components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "src/index.ts",
   "sideEffects": false,
