--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
-  "description": "UI Kit styling solution for the Next Design System.",
+  "description": "UI Kit styling solution.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "src/index.ts",
   "sideEffects": false,
