chore(lint): forbid root @mui/material imports
due to bundling/dev performance

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -12,7 +12,7 @@
     "no-restricted-imports": [
       "error",
       {
-        "patterns": ["@hitachivantara/*/*"],
+        "patterns": ["@hitachivantara/*/*", "@mui/material"],
         "paths": [
           "..",
           "../..",
