--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -30,7 +30,7 @@
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-router": "^7.1.5",
-    "reactflow": "^11.10.1",
+    "@xyflow/react": "^12.8.2",
     "swr": "^2.2.4",
     "usehooks-ts": "^2.16.0",
     "yup": "^1.3.2"
