--- a/templates/package.json
+++ b/templates/package.json
@@ -18,7 +18,7 @@
     "@hitachivantara/uikit-react-lab": "*",
     "@hitachivantara/uikit-react-pentaho": "*",
     "@hitachivantara/uikit-react-viz": "*",
-    "reactflow": "^11.10.1",
+    "@xyflow/react": "^12.8.2",
     "react-google-charts": "^4.0.0",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
