chore(lint): bump oxlint & fix issues

--- a/packages/cli/.oxlintrc.json
+++ b/packages/cli/.oxlintrc.json
@@ -1,17 +1,5 @@
 {
   "rules": {
-    "no-alert": "off",
-    "no-console": "off",
-    "import/extensions": "off",
-    "ssr-friendly/no-dom-globals-in-module-scope": "off"
-  },
-  "overrides": [
-    {
-      "files": ["src/baselines/**/*"],
-      "rules": {
-        "import/no-extraneous-dependencies": "off",
-        "import/no-relative-packages": "off"
-      }
-    }
-  ]
+    "no-console": "off"
+  }
 }
