--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -28,12 +28,9 @@
     "json5": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.4.4",
     "react-router": "^7.1.5",
-    "reactflow": "^11.10.1",
     "swr": "^2.2.4",
-    "usehooks-ts": "^2.16.0",
-    "yup": "^1.3.2"
+    "usehooks-ts": "^2.16.0"
   },
   "devDependencies": {
     "@hitachivantara/uikit-uno-preset": "*",
