--- a/templates/package.json
+++ b/templates/package.json
@@ -11,16 +11,16 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.11.0",
     "@emotion/css": "^11.11.0",
+    "@emotion/react": "^11.11.0",
     "@hitachivantara/uikit-react-core": "*",
     "@hitachivantara/uikit-react-icons": "*",
     "@hitachivantara/uikit-react-lab": "*",
     "@hitachivantara/uikit-react-pentaho": "*",
     "@hitachivantara/uikit-react-viz": "*",
-    "reactflow": "^11.10.1",
-    "react-google-charts": "^4.0.0",
+    "@xyflow/react": "^12.8.2",
     "leaflet": "^1.9.4",
+    "react-google-charts": "^4.0.0",
     "react-leaflet": "^4.2.1",
     "usehooks-ts": "^2.16.0"
   },
