--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -48,8 +48,8 @@
     "@hitachivantara/uikit-styles": "^5.51.1",
     "@mui/base": "5.0.0-beta.68",
     "@types/react-grid-layout": "^1.3.5",
+    "@xyflow/react": "^12.8.2",
     "react-grid-layout": "^1.4.4",
-    "reactflow": "^11.10.1",
     "uid": "^2.0.2",
     "usehooks-ts": "^2.16.0",
     "zustand": "^4.5.2"
