--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -25,6 +25,8 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "clean": "npx rimraf dist package",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
