--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hitachivantara/uikit-config": "*",
+    "@hitachivantara/uikit-uno-preset": "*",
     "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
     "@iconify-json/ph": "^1.2.1",
     "@mdx-js/react": "^3.1.0",
