--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -42,10 +42,10 @@
     "react-router-dom": "^6.9.0",
     "rollup": "^4.6.1",
     "ts-node": "^10.9.1",
-    "vite-plugin-static-copy": "^3.0.0"
+    "vite-plugin-static-copy": "^3.1.0"
   },
   "peerDependencies": {
-    "vite": "^4.1.4 || ^5.0.4 || ^6.0.0"
+    "vite": "^4.1.4 || ^5.0.4 || ^6.0.0 || ^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
