feat(AppShell): add Services package to the App Shell suite [PPUC-187]

--- a/apps/default-app/package.json
+++ b/apps/default-app/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.10.5",
     "@hitachivantara/app-shell-events": "*",
     "@hitachivantara/app-shell-navigation": "*",
+    "@hitachivantara/app-shell-services": "*",
     "@hitachivantara/app-shell-shared": "*",
     "@hitachivantara/uikit-react-core": "*",
     "@hitachivantara/uikit-react-icons": "*",
     "@mui/material": "^5.12.3",
+    "@phosphor-icons/react": "^2.1.10",
     "@types/react-table": "^7.7.14",
     "clsx": "^2.0.0",
     "i18next": "^24.2.2",
