--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -92,7 +93,7 @@
     "swr": "^2.2.4",
     "typescript": "^5.8.2",
     "unocss": "^66.4.2",
-    "vite": "^7.1.1",
+    "vite": "^7.1.5",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   },
