--- a/packages/app-shell-services/package.json
+++ b/packages/app-shell-services/package.json
@@ -1,53 +1,38 @@
 {
-  "name": "@hitachivantara/app-shell-ui",
-  "version": "1.12.3",
+  "name": "@hitachivantara/app-shell-services",
+  "version": "1.0.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
-  "description": "AppShell Component",
+  "description": "AppShell Services",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
-  "main": "src/index.ts",
   "sideEffects": false,
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lumada-design/hv-uikit-react.git",
-    "directory": "packages/app-shell-ui"
+    "directory": "packages/app-shell-services"
   },
   "bugs": "https://github.com/lumada-design/hv-uikit-react/issues",
   "scripts": {
     "build": "npm run clean && vite build",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
     "clean": "npx rimraf dist package",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
-    "@emotion/css": "^11.10.5",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@hitachivantara/app-shell-events": "^1.1.2",
-    "@hitachivantara/app-shell-navigation": "^1.4.9",
-    "@hitachivantara/app-shell-services": "^1.0.0",
-    "@hitachivantara/app-shell-shared": "^1.6.3",
-    "@hitachivantara/uikit-react-core": "^5.103.0",
-    "@hitachivantara/uikit-react-icons": "^5.16.4",
-    "@mui/material": "^5.16.14",
-    "i18next": "^24.2.2",
-    "i18next-browser-languagedetector": "^8.0.3",
-    "react-error-boundary": "^4.0.10",
-    "react-helmet-async": "^2.0.1",
-    "react-i18next": "15.7.1",
-    "uid": "^2.0.2"
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react": "^18.2.0"
   },
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json",
+    "./bundles/*": "./dist/bundles/*"
+  },
   "publishConfig": {
     "access": "public",
     "directory": "package",
@@ -59,7 +44,8 @@
         "import": "./dist/esm/index.js",
         "default": "./dist/esm/index.js"
       },
-      "./package.json": "./package.json"
+      "./package.json": "./package.json",
+      "./bundles/*": "./dist/bundles/*"
     }
   },
   "clean-publish": {
