--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
+    "@hitachivantara/app-shell-services": "^1.0.0",
     "@hitachivantara/app-shell-shared": "^1.6.3",
     "@hitachivantara/app-shell-ui": "^1.12.3",
     "@hitachivantara/uikit-react-icons": "^5.16.4",
@@ -48,8 +49,6 @@
     "vite": "^4.1.4 || ^5.0.4 || ^6.0.0 || ^7.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
     "mock-fs": "^5.2.0",
     "tsc-watch": "^6.0.0"
   },
