chore: fix `react-i18next` version

--- a/packages/app-shell-navigation/package.json
+++ b/packages/app-shell-navigation/package.json
@@ -35,7 +35,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "react-error-boundary": "^4.0.10",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "15.7.1",
     "vite": "^7.1.1"
   },
   "files": [
