--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-http-backend": "^3.0.2",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "15.7.1",
     "react-router-dom": "^6.29.0",
     "vite-tsconfig-paths": "^5.1.0"
   },
