--- a/apps/default-app/package.json
+++ b/apps/default-app/package.json
@@ -24,7 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "15.7.1",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
