--- a/apps/default-app/tsconfig.json
+++ b/apps/default-app/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }],
-  "compilerOptions": {
-    "moduleResolution": "Node"
-  }
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
