--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-react-icons",
-  "version": "5.16.5",
+  "version": "6.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -41,7 +41,7 @@
     "react-dom": ">=18.0.0"
   },
   "dependencies": {
-    "@hitachivantara/uikit-styles": "^5.51.0"
+    "@hitachivantara/uikit-styles": "^6.0.0-next.0"
   },
   "devDependencies": {
     "@svgr/core": "^8.1.0",
