--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-react-utils",
-  "version": "0.2.45",
+  "version": "6.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -36,7 +36,7 @@
   "dependencies": {
     "@emotion/serialize": "^1.1.2",
     "@emotion/utils": "^1.4.0",
-    "@hitachivantara/uikit-react-shared": "^5.5.5",
+    "@hitachivantara/uikit-react-shared": "^6.0.0-next.0",
     "clsx": "^2.1.1"
   },
   "devDependencies": {
