--- a/packages/app-shell-events/package.json
+++ b/packages/app-shell-events/package.json
@@ -2,7 +2,7 @@
   "name": "@hitachivantara/app-shell-events",
   "version": "1.1.2",
   "type": "module",
-  "private": false,
+  "private": true,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "AppShell Events",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
@@ -21,7 +21,7 @@
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
-    "@hitachivantara/uikit-react-core": "^5.72.0",
+    "@hitachivantara/uikit-react-core": "^6.0.0-next.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
