--- a/packages/app-shell-ui/package.json
+++ b/packages/app-shell-ui/package.json
@@ -2,7 +2,7 @@
   "name": "@hitachivantara/app-shell-ui",
   "version": "1.13.5",
   "type": "module",
-  "private": false,
+  "private": true,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "AppShell Component",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
@@ -30,8 +30,8 @@
     "@hitachivantara/app-shell-navigation": "^1.4.15",
     "@hitachivantara/app-shell-services": "^1.1.2",
     "@hitachivantara/app-shell-shared": "^1.7.5",
-    "@hitachivantara/uikit-react-core": "^5.106.0",
-    "@hitachivantara/uikit-react-icons": "^5.16.5",
+    "@hitachivantara/uikit-react-core": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-icons": "^6.0.0-next.0",
     "@mui/material": "^7.0.2",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
