--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -2,7 +2,7 @@
   "name": "@hitachivantara/app-shell-vite-plugin",
   "version": "1.10.0",
   "type": "module",
-  "private": false,
+  "private": true,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "AppShell Vite Plugin",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
@@ -29,8 +29,8 @@
     "@hitachivantara/app-shell-services": "^1.1.2",
     "@hitachivantara/app-shell-shared": "^1.7.5",
     "@hitachivantara/app-shell-ui": "^1.13.5",
-    "@hitachivantara/uikit-react-icons": "^5.16.5",
-    "@hitachivantara/uikit-react-shared": "^5.5.5",
+    "@hitachivantara/uikit-react-icons": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-shared": "^6.0.0-next.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
