--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-react-core",
-  "version": "5.106.0",
+  "version": "6.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -41,9 +41,9 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/serialize": "^1.1.2",
-    "@hitachivantara/uikit-react-shared": "^5.5.5",
-    "@hitachivantara/uikit-react-utils": "^0.2.45",
-    "@hitachivantara/uikit-styles": "^5.51.0",
+    "@hitachivantara/uikit-react-shared": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-utils": "^6.0.0-next.0",
+    "@hitachivantara/uikit-styles": "^6.0.0-next.0",
     "@internationalized/date": "^3.2.0",
     "@mui/base": "5.0.0-beta.68",
     "@popperjs/core": "^2.11.8",
