--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-react-lab",
-  "version": "5.46.12",
+  "version": "6.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
@@ -42,10 +42,10 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^6.0.1",
     "@emotion/css": "^11.11.0",
-    "@hitachivantara/uikit-react-core": "^5.106.0",
-    "@hitachivantara/uikit-react-icons": "^5.16.5",
-    "@hitachivantara/uikit-react-utils": "^0.2.45",
-    "@hitachivantara/uikit-styles": "^5.51.0",
+    "@hitachivantara/uikit-react-core": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-icons": "^6.0.0-next.0",
+    "@hitachivantara/uikit-react-utils": "^6.0.0-next.0",
+    "@hitachivantara/uikit-styles": "^6.0.0-next.0",
     "@mui/base": "5.0.0-beta.68",
     "@types/react-grid-layout": "^1.3.5",
     "@xyflow/react": "^12.8.2",
