--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hitachivantara/uikit-styles",
-  "version": "5.51.0",
+  "version": "6.0.0-next.0",
   "type": "module",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
