--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -2,7 +2,7 @@
   "name": "@hitachivantara/uikit-uno-preset",
   "version": "0.2.70",
   "type": "module",
-  "private": false,
+  "private": true,
   "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit UnoCSS preset with the NEXT theme.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
@@ -35,7 +35,7 @@
     "@unocss/preset-wind3": "^66.4.2"
   },
   "dependencies": {
-    "@hitachivantara/uikit-styles": "^5.51.0",
+    "@hitachivantara/uikit-styles": "^6.0.0-next.0",
     "@unocss/preset-rem-to-px": "^66.4.2"
   },
   "devDependencies": {
